# actix-web-boilerplate

./: .editorconfig  .gitignore  Cargo.toml  README.md
src/: components.rs  config.rs  controllers.rs  docs.rs  libraries.rs  main.rs  routes.rs
src/components/v1/: router.rs
src/components/v1/qr_codes/: controllers.rs  schemas.rs  services.rs
src/controllers/: monitoring.rs  qr_codes.rs
src/libraries/: qr_codes.rs
src/libraries/constants/: config.rs  correlation_id.rs
src/libraries/middlewares/: correlation_id.rs
src/libraries/schemas/: qr_codes.rs
src/libraries/utils/: correlation_id.rs  qr_codes.rs
src/routes/: monitoring.rs  qr_codes.rs  router.rs
src/services/: qr_codes.rs
