[package]
name = "rust-api-boilerplate"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
env_logger = "0.11.8"
log = "0.4.27"
qrcode = "0.14.1"
serde = { version = "1.0.219", features = ["derive"] }
urlencoding = "2.1.3"
utoipa = { version = "5.4.0", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["actix-web"] }
